(enhancement) revamped user auth